cluster/apps/data/databases/stackgres/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: stackgres
  labels:
    goldilocks.fairwinds.com/enabled: "true"
